aux_source_directory(./ M_SRC)
ADD_LIBRARY(orocos-kdl-models STATIC ${M_SRC}) 

INCLUDE_DIRECTORIES(${PROJ_SOURCE_DIR}/src ${PROJ_BINARY_DIR}/src)
SET_TARGET_PROPERTIES( orocos-kdl-models PROPERTIES
  SOVERSION "${KDL_VERSION_MAJOR}.${KDL_VERSION_MINOR}"
  VERSION "${KDL_VERSION}"
  COMPILE_FLAGS "${CMAKE_CXX_FLAGS_ADD} ${KDL_CFLAGS}"
  INSTALL_NAME_DIR "${CMAKE_INSTALL_PREFIX}/lib${LIB_SUFFIX}"
  PUBLIC_HEADER models.hpp)
TARGET_LINK_LIBRARIES(orocos-kdl-models orocos-kdl)